updating the API and allowing for more descriptive params

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <i class="bi bi-arrow-repeat" role="img" aria-label="Refresh"></i>
         <span id="lbl_refresh"></span>
       </button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash='overview'" id="btn_overview">Level Overview</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash=''" id="btn_overview">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'" id="btn_top_players">Top Players</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players_1k'" id="btn_top_players_1k">Top Players (&gt;1k solvers)</button>
     </div>
