--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
   <div class="row">
     <div class="col">
       <div id="content">
-        <h2>
+        <h2 id="title">
           Initializing...
         </h2>
+        <div id="extra"></div>
+        <table id="main_table" class="table table-striped w-auto" border="2">
+          <thead class="sticky-top"></thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
   </div>
